# msse_mpi_sort

./: CMakeLists.txt  Dockerfile  README.md  build_image.sh  interactive.sh
.github/workflows/: main.yml
src/: main.cpp
